fix: adjust signup form gap

--- a/frontend/components/specific/LoginCard/forms/forms.module.css
+++ b/frontend/components/specific/LoginCard/forms/forms.module.css
@@ -25,7 +25,7 @@
 .signupForm {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 8px;
 }
 
 .signupButton {
